tests/snapshots/run_wpt_conformance__onnx_expand_float16_1D_tensor_to_5D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "expand.https.any.js",
    "expand float16 1D tensor to 5D",
    "onnx",
    "PASS",
)
